# dosbox-virtisa

./: .gitignore  CMakeLists.txt  README.md  THANKS  acinclude.m4  config.h.cmake
.github/workflows/: compile.yml
.pc/0001-Use-getbegy-rather-than-accessing-window-structures-.patch/src/debug/: debug_gui.cpp
.pc/74-3-events.diff/src/gui/: sdlmain.cpp
debian/: changelog  control  copyright  dosbox.install  rules  watch
debian/patches/: 0001-Use-getbegy-rather-than-accessing-window-structures-.patch  74-3-events.diff  fix_manpage_errors.patch  format-strings.patch  series  spelling-fixes.patch  thanks-utf-8.patch
debian/upstream/: metadata
docs/: dosbox.1
src/: dosbox.cpp
src/cpu/: flags.cpp
src/cpu/core_dyn_x86/: cache.h
src/cpu/core_dynrec/: cache.h
src/debug/: debug.cpp  debug_gui.cpp
src/dos/: dos.cpp  dos_mscdex.cpp  dos_programs.cpp  drive_fat.cpp
src/gui/: sdl_mapper.cpp  sdlmain.cpp
src/hardware/: iohandler.cpp  ipx.cpp  keyboard.cpp  vga_attr.cpp
src/ints/: bios.cpp
src/isa/: isa.cpp  isa.h
src/misc/: cross.cpp
src/shell/: shell.cpp  shell_cmds.cpp
tools/: .gitignore  create_sd.sh
